# INtrinsics

./: .clang-format  CMakeLists.txt  README.md  intrinsics.h  intrinsics.hpp  intrinsics.t.cpp
.github/workflows/: clang-format.yml  tests.yml
